basic css content

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
       <form>
         <div class="input-wrapper">
-          <input type="email" id="email-input">
+          <input type="email" id="email-input" placeholder="Email Address">
           <img src="./images/icon-error.svg" alt="icon error">
         </div>
         <button type="submit">send <img src="./images/icon-arrow.svg" alt="icon arrow"></button>
       </form>
-      Email Address
+
     </div>
   </main>
 
