--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Base Apparel coming soon page</title>
-
+  <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
@@ -17,30 +17,30 @@
     <header>
       <img src="./images/logo.svg" alt="base apparel logo" />
     </header>
+    <!-- main image  -->
     <figure>
       <picture>
-        <source media="(max-width:1023px)" srcset="./images/hero-mobile.jpg" />
-        <source media="(min-width:1024px)" srcset="./images/hero-desktop.jpg" />
+        <source media="(max-width:767px)" srcset="./images/hero-mobile.jpg" />
+        <source media="(min-width:768px)" srcset="./images/hero-desktop.jpg" />
         <img src="./images/hero-desktop.jpg" alt="image hero" />
       </picture>
     </figure>
+    <!-- main content -->
     <div class="content">
       <h1><span>We're</span> coming soon</h1>
       <p>Hello fellow shoppers! We're currently building our new fashion store.
         Add your email below to stay up-to-date with announcements and our launch deals.</p>
-
+      <!-- form section -->
       <form>
         <div class="input-wrapper">
-          <input type="email" id="email-input" placeholder="Email Address">
-          <img src="./images/icon-error.svg" alt="icon error">
+          <input type="email" id="email-input" placeholder="Email Address" required>
+          <img class="icon-error" src="./images/icon-error.svg" alt="icon error">
         </div>
         <button type="submit">send <img src="./images/icon-arrow.svg" alt="icon arrow"></button>
       </form>
-
     </div>
   </main>
-
-
+  <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
